--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background: #eeeded;
 }
 
 .mainWrapper {
@@ -18,8 +23,7 @@
 }
 
 .homePage {
-  padding: 0 clamp(20px, calc(47 / 14.4 * 1vw), 47px);
-  padding-top: calc(113 / 14.4 * 1vw);
+  padding: calc(113 / 14.4 * 1vw) clamp(20px, calc(47 / 14.4 * 1vw), 47px);
 }
 
 .homePage .navigation {
@@ -51,23 +55,110 @@
   padding: 0 clamp(40px, calc(67 / 14.4 * 1vw), 67px);
   display: flex;
   align-items: center;
+  justify-content: center;
   column-gap: clamp(50px, calc(120 / 14.4 * 1vw), 120px);
   row-gap: clamp(40px, calc(80 / 14.4 * 1vw), 80px);
   flex-wrap: wrap;
 }
 
 .galleryItem {
-  position: relative;
-  cursor: pointer;
-}
-
-.galleryItem > img {
   width: 100%;
   max-width: clamp(200px, calc(324 / 14.4 * 1vw), 324px);
   aspect-ratio: 324/462;
+  cursor: pointer;
+  transition: all 0.4s ease;
 }
 
+.galleryItem:nth-child(1) {
+  background: url(./assets/images/1.webp);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
-.galleryItem>p{
-  
+.galleryItem:nth-child(2) {
+  background: url(./assets/images/2.webp);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.galleryItem:nth-child(3) {
+  background: url(./assets/images/3.webp);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.galleryItem:nth-child(4) {
+  background: url(./assets/images/4.webp);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.galleryItem:nth-child(5) {
+  background: url(./assets/images/5.webp);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.galleryItem:nth-child(6) {
+  background: url(./assets/images/6.webp);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.galleryItem:nth-child(7) {
+  background: url(./assets/images/7.webp);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.galleryItem:nth-child(8) {
+  background: url(./assets/images/8.webp);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.galleryItem:nth-child(9) {
+  background: url(./assets/images/9.webp);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.galleryItem div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  display: none;
+  transition: all 0.4s ease;
+}
+
+.galleryItem p {
+  position: absolute;
+  font-family: "Bebas Neue";
+  font-size: clamp(40px, calc(100 / 14.4 * 1vw), 100px);
+  text-transform: uppercase;
+  background: linear-gradient(
+    to right,
+    #fff 0%,
+    #fff 10%,
+    #000 10%,
+    #000 30%,
+    #fff 30%,
+    #fff 70%,
+    #000 70%,
+    #000 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+  white-space: nowrap;
+}
+
+.galleryItem:hover div {
+  display: flex;
 }
