--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: #eeeded;
+  background: #f1f1f1;
 }
 
 .mainWrapper {
@@ -22,7 +22,8 @@ body {
   margin: 0 auto;
 }
 
-.homePage {
+.homePage,
+.contact {
   padding: calc(113 / 14.4 * 1vw) clamp(20px, calc(47 / 14.4 * 1vw), 47px);
 }
 
@@ -41,6 +42,11 @@ body {
   letter-spacing: 0%;
   color: rgba(0, 0, 0, 1);
   text-decoration: none;
+  transition: all 0.4s ease;
+}
+
+.navigation > a:hover {
+  opacity: 0.6;
 }
 
 .navigation > a:first-child {
@@ -212,4 +218,137 @@ body {
     width: 100%;
     max-width: 100%;
   }
+}
+
+.contactWrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: clamp(120px, calc(213 / 14.4 * 1vw), 213px);
+}
+
+.contactLeft {
+  margin-top: clamp(15px, calc(29 / 14.4 * 1vw), 29px);
+  display: flex;
+  flex-direction: column;
+  gap: clamp(10px, calc(16 / 14.4 * 1vw), 16px);
+}
+
+.contactLeft > p > a {
+  text-decoration: none;
+  color: #808080;
+  font-family: "DM Sans";
+  font-weight: 400;
+  font-size: clamp(14px, calc(18 / 14.4 * 1vw), 18px);
+  line-height: 100%;
+  letter-spacing: 0%;
+  white-space: nowrap;
+  transition: all 0.4s ease;
+}
+
+.contactLeft > p > a:hover {
+  opacity: 0.6;
+}
+
+.contactLeft > p > .active {
+  font-weight: 700;
+  color: rgba(0, 0, 0, 1);
+}
+
+.contactRight h1 {
+  font-family: "Bebas Neue";
+  font-weight: 400;
+  font-size: clamp(25px, calc(50 / 14.4 * 1vw), 50px);
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 1);
+  margin-bottom: clamp(15px, calc(24 / 14.4 * 1vw), 24px);
+}
+
+.contactRightDesc {
+  font-family: "DM Sans";
+  font-weight: 400;
+  font-size: clamp(12px, calc(16 / 14.4 * 1vw), 16px);
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: rgba(0, 0, 0, 1);
+  margin-bottom: clamp(15px, calc(24 / 14.4 * 1vw), 24px);
+}
+
+.social {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(12px, calc(16 / 14.4 * 1vw), 16px);
+  margin-bottom: clamp(26px, calc(36 / 14.4 * 1vw), 36px);
+}
+
+.social > p > a {
+  text-decoration: none;
+  font-family: "Bebas Neue";
+  font-weight: 400;
+  font-size: clamp(20px, calc(40 / 14.4 * 1vw), 40px);
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: rgba(0, 0, 0, 1);
+  transition: all 0.4s ease;
+}
+
+.social > p > a:hover {
+  opacity: 0.6;
+}
+
+.social > p > a > img {
+  margin-bottom: clamp(15px, calc(20 / 14.4 * 1vw), 20px);
+}
+
+form {
+  width: 100%;
+  max-width: clamp(340px, calc(552 / 14.4 * 1vw), 552px);
+  display: flex;
+  flex-direction: column;
+  gap: clamp(16px, calc(24 / 14.4 * 1vw), 24px);
+}
+
+form input,
+form textarea {
+  width: 100%;
+  background: none;
+  border: 1px solid rgba(0, 0, 0, 1);
+  padding: clamp(12px, calc(16.5 / 14.4 * 1vw), 16.5px);
+  color: rgba(0, 0, 0, 1);
+  font-family: "DM Sans";
+  font-weight: 400;
+  font-size: clamp(12px, calc(16 / 14.4 * 1vw), 16px);
+  line-height: 100%;
+  letter-spacing: 3%;
+}
+
+form input::placeholder,
+form textarea::placeholder {
+  color: rgba(202, 202, 202, 1);
+}
+
+form div {
+  display: flex;
+  gap: clamp(6px, calc(10 / 14.4 * 1vw), 10px);
+}
+
+form button {
+  padding: clamp(12px, calc(16.5 / 14.4 * 1vw), 16.5px);
+  font-family: "DM Sans";
+  font-weight: 500;
+  font-size: clamp(12px, calc(16.5 / 14.4 * 1vw), 16.5px);
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 1);
+  background: #000;
+  transition: all 0.4s ease;
+  border: none;
+  cursor: pointer;
+}
+
+form button:hover {
+  opacity: 0.6;
 }
