--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,8 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
-  display: none;
+  opacity: 0;
+  visibility: hidden;
   transition: all 0.4s ease;
 }
 
@@ -184,7 +185,8 @@ body {
 }
 
 .galleryItem:hover div {
-  display: flex;
+  opacity: 1;
+  visibility: visible;
 }
 
 @media only screen and (max-width: 900px) {
