fix hover effect

--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,6 @@
   box-sizing: border-box;
 }
 
-body {
-  background: #f1f1f1;
-}
-
 .mainWrapper {
   width: 100%;
   overflow: hidden;
@@ -66,6 +62,7 @@ body {
   column-gap: clamp(50px, calc(120 / 14.4 * 1vw), 120px);
   row-gap: clamp(40px, calc(80 / 14.4 * 1vw), 80px);
   flex-wrap: wrap;
+  position: relative;
 }
 
 .galleryItemWrapper {
@@ -91,6 +88,7 @@ body {
   aspect-ratio: 324/462;
   cursor: pointer;
   transition: all 0.4s ease;
+  background: red;
 }
 
 .galleryItemWrapper:nth-child(1) .galleryItem {
@@ -150,32 +148,47 @@ body {
 }
 
 .galleryItem div {
-  width: 100%;
-  height: 100%;
+  width: max-content;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
+  position: fixed;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -55%);
   opacity: 0;
   visibility: hidden;
-  transition: all 0.4s ease;
+  transition: all 0.3s ease;
+  background: green;
+}
+
+.galleryItem .activeItem {
+  opacity: 1;
+  visibility: visible;
 }
 
 .galleryItem p {
   position: absolute;
   font-family: "Bebas Neue";
-  font-size: clamp(40px, calc(100 / 14.4 * 1vw), 100px);
+  font-size: clamp(40px, calc(140 / 14.4 * 1vw), 130px);
   text-transform: uppercase;
+}
+
+.galleryItemWrapper:nth-child(1) .galleryItem div p,
+.galleryItemWrapper:nth-child(4) .galleryItem div p,
+.galleryItemWrapper:nth-child(7) .galleryItem div p {
   background: linear-gradient(
     to right,
     #fff 0%,
-    #fff 10%,
-    #000 10%,
-    #000 30%,
-    #fff 30%,
-    #fff 70%,
-    #000 70%,
-    #000 100%
+    #fff 12.5%,
+    #000 12.5%,
+    #000 26%,
+    #fff 26%,
+    #fff 71.5%,
+    #000 71.5%,
+    #000 87.5%,
+    #fff 87.5%,
+    #fff 100%
   );
   -webkit-background-clip: text;
   background-clip: text;
@@ -184,6 +197,51 @@ body {
   white-space: nowrap;
 }
 
+.galleryItemWrapper:nth-child(2) .galleryItem div p,
+.galleryItemWrapper:nth-child(5) .galleryItem div p,
+.galleryItemWrapper:nth-child(8) .galleryItem div p {
+  background: linear-gradient(
+    to right,
+    #fff 0%,
+    #fff 9.5%,
+    #000 9.5%,
+    #000 26.5%,
+    #fff 26.5%,
+    #fff 73%,
+    #000 73%,
+    #000 90.5%,
+    #fff 90.5%,
+    #fff 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+  white-space: nowrap;
+}
+
+.galleryItemWrapper:nth-child(3) .galleryItem div p,
+.galleryItemWrapper:nth-child(6) .galleryItem div p,
+.galleryItemWrapper:nth-child(9) .galleryItem div p {
+  background: linear-gradient(
+    to right,
+    #fff 0%,
+    #fff 6%,
+    #000 6%,
+    #000 25%,
+    #fff 25%,
+    #fff 75%,
+    #000 75%,
+    #000 94%,
+    #fff 94%,
+    #fff 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+  white-space: nowrap;
+}
 .galleryItem:hover div {
   opacity: 1;
   visibility: visible;
